2012-07-05  Albert Chu <chu11@llnl.gov>

	* Add support for assume max record sdr record count.
	
2012-07-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-oem.h: Add additional
	Poweredge details.
	
2012-06-28  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-dell.c (ipmi_oem_dell_get_system_info): Fix
	error output corner case.
	
2012-06-26  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix vendor specific documentation error.
	
2012-06-25  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Move more macros to ipmi-oem-spec.h.  General code
	cleanup.

	* libfreeipmi/include/freeipmi/spec/ipmi-channel-spec.h: Add
	additional macros.

	* bmc-info/, bmc-config/, ipmi-pef-config/: Use new macros
	appropriately.
	
2012-06-21  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-config-file-common.c: Fix casting bug w/
	signed vs unsigned ints.

	* Make all verbose_count variables in tools unsigned ints.
	
2012-06-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h: New file.

	* ipmi-oem/: Migrate various information into new ipmi-oem-spec.h
	file and
	libfreeipmi/include/spec/ipmi-system-info-parameters-oem-spec.h.

	* ipmipower/, libfreeipmi/sel/: Use new macros in ipmi-oem-spec.h.

	* ipmi-oem/ipmi-oem-thirdparty.h, ipmi-oem/ipmi-oem-thirdparty.c:
	New files.

	* ipmi-oem/ipmi-oem-inventec.c, ipmi-oem/ipmi-oem-quanta.c:
	Migrate some commmon functions to ipmi-oem-thirdparty.c and
	ipmi-oem-thirdparty.h.
	
2012-06-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret/: Support new interpretations based on
	sensors found on IBM X3850 X5: Version Change, System Firmware
	Progress Transition Severity, Button/Switch Transition Severity,
	Chassis Transition Severity, POST Memory Resize State,
	Cable/Interconnect Transition Severity, Boot Error Transition
	Severity, Slot Connector Transition Severity, Memory State, and
	Memory Transition Severity.

	* etc/freeipmi_interpret_sel.conf,